# seal-demon-tts

./: .gitignore  Cargo.toml  DemonTTS_L4_Training.ipynb  README.md  aether_wave_filter.py  convert_book.py  convert_to_student_pairs.py  cook_for_6_hours.bat  cook_for_6_hours.sh  demo_tts.py  demo_tts_clean.py  dsp_postprocess.py  dual_tts_attention.py  epsilon_phase_bridge.py  epsilon_phase_integration.py  generate_audiobook.py  generate_audiobook_judged.py  generate_ouroboros_data.py  generate_training_data.py  gui.py  master.bat  master.sh  master_quality.bat  master_quality.sh  multi_pass_tts.py  ouroboros_trainer.py  pdf_parser.py  pipeline_chapter2_master.py  pyproject.toml  requirements.txt  run.bat  run.sh  semantic_cache.py  test_pipeline.py  train_7_hours.bat  train_7_hours.sh  train_all.py  train_scheduler.py  train_student_only.sh  train_student_window.bat  (+2 more)
aether/: __init__.py  filter_net.py  lattice_filter.py  loss.py  model.py
audiobook/: Threshold_s Pursuit _ 10_ Dance Of Politics.flac  Threshold_s Pursuit _ 11_ The Enigmatic Gathering.flac  Threshold_s Pursuit _ 12_ Catalyst Of The Kingdom.flac  Threshold_s Pursuit _ 13_ The Unseen Path.flac  Threshold_s Pursuit _ 14_ Inert Awakening.flac  Threshold_s Pursuit _ 16_ Newcomer.flac  Threshold_s Pursuit _ 17_ Patron.flac  Threshold_s Pursuit _ 18_ Embers Of Triumph.flac  Threshold_s Pursuit _ 19_ Shadows Of Authority.flac  Threshold_s Pursuit _ 20_ Resonance Of Fear.flac  Threshold_s Pursuit _ 21_ Unveiling Dominion.flac  Threshold_s Pursuit _ 22_ Convergence.flac  Threshold_s Pursuit _ 23_ Resurrection Of.flac  Threshold_s Pursuit _ 24_ Revelation.flac  Threshold_s Pursuit _ 2_ Bound By Will.flac  Threshold_s Pursuit _ 3_ The Enigmatic Angel.flac  Threshold_s Pursuit _ 4_ The Divine Free Fall.flac  Threshold_s Pursuit _ 7_ Bound By Chains.flac  Threshold_s Pursuit _ 9_ The Veil Of Melancholy.flac  Threshold_s Pursuit _ Preface.flac
cloud/: Dockerfile  (+7 more)
pipeline/: Cargo.toml
pipeline/src/: audio_io.rs  lib.rs  main.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
(+26 files in other folders)
