[workspace]
members = ["tokenizer", "pipeline"]
resolver = "2"

[workspace.dependencies]
ort = { version = "2.0.0-rc.5", features = ["cuda"] }
ndarray = "0.17"
 tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
 anyhow = "1"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
