[package]
name = "demon-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demon-tts"
path = "src/main.rs"

[dependencies]
ort = { version = "2.0.0-rc.5", features = ["cuda"] }
ndarray = "0.17"
 tokenizer = { path = "../tokenizer" }
 anyhow = "1"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 clap = { version = "4", features = ["derive"] }
 serde_json = "1"
 rubato = "0.14"
 hound = "3.5"

[dev-dependencies]
 tokio-test = "0.4"
