[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
ort = { version = "2.0.0-rc.5", features = ["cuda"] }
ndarray = "0.17"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
